<resources>
    <string name="app_name">Mike Leon, First App</string>
    <string name="intro">Welcome to my first app ever! Below is info about me</string>
    <string name="facts">I have two dogs, a boston terrier and a yorkie terrier mix named Oreo and Rocky
                            \n
                            \nI have a lovely wife named Boyu
                            \n
                            \nI work for Zeek\'s Pizza as a delivery driver and love getting free pizza!
                            \n
                            \nI hope to one day become a developer, I am currently leaning towards web but if mobile is fun I may just do that!
                            \n
                            \nI love video games and am currently playing Farcry 5</string>
    <string name="pizza">Pizza</string>
    <string name="githubtest">Test</string>
    <string name="type_something_here">Type something here!</string>
    <string name="submit">Submit</string>
    <string name="submit_some_android_string_paste_as_plain_text">Submit something</string>
    <string name="list">list</string>
    <string name="toast1">Toast1</string>
    <string name="toast2">Toast2</string>
    <string name="toast3">Toast3</string>
    <string name="zombie_movie_poster">Zombie movie poster</string>
    <string name="test">test</string>
    <string name="test2">test2</string>
    <string name="test3">test3</string>
    <string name="test4">test4</string>
    <string name="title">title</string>
    <string name="year">year</string>
    <string name="menu_action_setting">Settings</string>
    <string name="about_content">This is my first app. It showcases various techniques I have learned / researched and plan on continuing my education and adding more and more types of code to this application.</string>
    <string name="menu_action_about">About</string>
    <string name="menu_action_movies">Movies</string>
    <string name="openDescription">Opens Nav Drawer</string>
    <string name="closeDescription">Closes Nav Drawer</string>
    <string name="navigation">Navigation</string>
    <string name="cams">Cams</string>
    <string name="camaddress">camAddress</string>
    <string name="traffic_cams">Traffic Cams</string>
    <string name="live_cams">Live Cams</string>
    <string name="googleApi">AIzaSyCf1BEc5-DnMAPhngRHrPR1ayS_hsoRNN4</string>
    <string name="maps">Maps</string>
</resources>