<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

        <item
            android:id="@+id/action_setting"
            android:icon="@drawable/ic_back"
            android:title="@string/menu_action_setting"
            app:showAsAction="never" />

        <item
            android:id="@+id/action_about"
            android:icon="@drawable/info_dark"
            android:title="@string/menu_action_about"
            app:showAsAction="never" />

        <item
            android:id="@+id/action_liveCams"
            android:icon="@drawable/info_video"
            android:title="@string/live_cams" />
        <item
            android:id="@+id/action_movies"
            android:icon="@drawable/info_movies"
            android:title="@string/menu_action_movies"
            app:showAsAction="never" />
</menu>