<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/parentLayout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="8dp">

    <TextView
        android:id="@+id/name"
        android:layout_width="184dp"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:text="@string/title"
        android:textAlignment="center"
        android:textColor="#000"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/description"
        android:layout_width="184dp"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/name"
        android:layout_below="@+id/name"
        android:text="@string/camaddress"
        android:textAlignment="center" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="376dp"
        android:layout_height="197dp"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/description"
        android:contentDescription="@string/traffic_cams"
        android:scaleType="fitCenter"
        app:srcCompat="@mipmap/ic_launcher" />

</RelativeLayout>